--- a/scripts/deploy/package.json
+++ b/scripts/deploy/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "esbuild index.ts --bundle  --platform=node --outfile=app.js",
-    "start": "esbuild index.ts --bundle  --platform=node --outfile=app.js && node app.js"
+    "publish": "esbuild index.ts --bundle  --platform=node --outfile=app.js && node app.js"
   },
   "dependencies": {
     "esbuild": "^0.8.44",
