--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,10 +27,10 @@ jobs:
             ${{ runner.OS }}-
 
       - name: Install dependencies
-        run: pushd scripts/deploy && yarn --frozen-lockfile
+        run: cd scripts/deploy && yarn --frozen-lockfile
 
       - name: Generate
-        run: yarn run publish && popd
+        run: cd scripts/deploy && yarn run publish
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
