--- a/scripts/deploy/package.json
+++ b/scripts/deploy/package.json
@@ -9,11 +9,10 @@
   },
   "dependencies": {
     "esbuild": "^0.8.44",
-    "mkdirp": "^1.0.4",
-    "showdown": "^1.9.1"
+    "marked": "^3.0.2",
+    "mkdirp": "^1.0.4"
   },
   "devDependencies": {
-    "@types/node": "^14.14.25",
-    "@types/showdown": "^1.9.3"
+    "@types/node": "^14.14.25"
   }
 }
