--- a/scripts/deploy/package.json
+++ b/scripts/deploy/package.json
@@ -8,13 +8,13 @@
     "publish": "esbuild index.ts --bundle  --platform=node --outfile=app.js && node app.js"
   },
   "dependencies": {
-    "@types/marked": "^3.0.0",
-    "esbuild": "^0.8.44",
-    "highlight.js": "^11.2.0",
-    "marked": "^3.0.2",
-    "mkdirp": "^1.0.4"
+    "@types/marked": "4.0.2",
+    "esbuild": "0.14.23",
+    "highlight.js": "11.4.0",
+    "marked": "4.0.12",
+    "mkdirp": "1.0.4"
   },
   "devDependencies": {
-    "@types/node": "^14.14.25"
+    "@types/node": "17.0.18"
   }
 }
