--- a/scripts/deploy/package.json
+++ b/scripts/deploy/package.json
@@ -15,6 +15,10 @@
     "mkdirp": "1.0.4"
   },
   "devDependencies": {
-    "@types/node": "17.0.18"
+    "@types/node": "18.0.6"
+  },
+  "volta": {
+    "node": "18.4.0",
+    "yarn": "3.6.1"
   }
 }
