--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,6 +30,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
+      - name: enable corepack and update yarn
+        run: corepack enable && corepack prepare yarn@<v3.6.1> --activate
+
       - name: Install dependencies
         run: cd scripts/deploy && yarn --frozen-lockfile
 
