記法の意味が理解できていなかったので修正

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,7 +31,7 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: enable corepack and update yarn
-        run: corepack enable && corepack prepare yarn@<v3.6.1> --activate
+        run: corepack enable && corepack prepare yarn@v3.6.1 --activate
 
       - name: Install dependencies
         run: cd scripts/deploy && yarn --frozen-lockfile
