--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,32 +15,16 @@ jobs:
       - name: Setup node ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: '18.4.0'
-
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
-
-      - name: Cache Node.js modules
-        uses: actions/cache@v3
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - name: enable corepack and update yarn
-        run: corepack enable && corepack prepare yarn@v3.6.1 --activate
+          node-version: '20.9.0'
 
       - name: Install dependencies
-        run: cd scripts/deploy && yarn --frozen-lockfile
+        run: cd app && npm ci
 
       - name: Generate
-        run: cd scripts/deploy && yarn run publish
+        run: cd app && npm run build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           personal_token: ${{ secrets.PERSONAL_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./app/out
