--- a/app/package.json
+++ b/app/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview"
   },
   "dependencies": {
+    "@astrojs/react": "3.0.5",
+    "@astrojs/tailwind": "5.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "next": "14.0.1",
+    "astro": "3.5.5",
     "highlight.js": "11.9.0",
     "marked": "10.0.0",
     "marked-gfm-heading-id": "3.1.1",
@@ -23,11 +25,7 @@
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
-    "autoprefixer": "10.4.16",
-    "postcss": "8.4.31",
-    "tailwindcss": "3.3.5",
-    "eslint": "8.53.0",
-    "eslint-config-next": "14.0.1"
+    "tailwindcss": "3.3.5"
   },
   "volta": {
     "node": "20.9.0",
