--- a/app/package.json
+++ b/app/package.json
@@ -9,23 +9,25 @@
     "preview": "astro preview"
   },
   "dependencies": {
+    "@astrojs/markdown-remark": "3.5.0",
     "@astrojs/react": "3.0.5",
     "@astrojs/tailwind": "5.0.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "astro": "3.5.5",
     "highlight.js": "11.9.0",
     "marked": "10.0.0",
     "marked-gfm-heading-id": "3.1.1",
     "marked-highlight": "2.0.7",
-    "marked-mangle": "1.1.5"
+    "marked-mangle": "1.1.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "remark-breaks": "4.0.0"
   },
   "devDependencies": {
-    "typescript": "5.2.2",
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
-    "tailwindcss": "3.3.5"
+    "tailwindcss": "3.3.5",
+    "typescript": "5.2.2"
   },
   "volta": {
     "node": "20.9.0",
